--- a/「競賽任務1程式碼」git上傳.ipynb
+++ b/「競賽任務1程式碼」git上傳.ipynb
@@ -745,7 +745,7 @@
         "        raise FileNotFoundError(f\"Private Zip file not found at {private_zip_file_path}\")\n",
         "\n",
         "    # 定義密碼\n",
-        "    password = \"aicup20660205\".encode('utf-8')\n",
+        "    password = \"密碼密碼密碼\".encode('utf-8')\n",
         "\n",
         "    try:\n",
         "        with zipfile.ZipFile(private_zip_file_path, 'r') as zip_ref:\n",
@@ -754,7 +754,7 @@
         "    except RuntimeError as e:\n",
         "        if \"password required for extraction\" in str(e) or \"Bad password for file\" in str(e):\n",
         "            print(f\"解壓縮失敗: {e}\")\n",
-        "            print(\"錯誤：密碼不正確。請確認密碼 'aicup20660205' 是否正確無誤。\")\n",
+        "            print(\"錯誤：密碼不正確。請確認密碼 '密碼密碼密碼' 是否正確無誤。\")\n",
         "            raise Exception(f\"解壓縮私有資料集失敗: 密碼錯誤。\")\n",
         "        else:\n",
         "            print(f\"解壓縮私有資料集失敗: {e}\")\n",
